--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,10 @@
     "name": "mangoit/subcategorylisting",
     "description": "Mangoit SubCategoryListing",
     "require": {
-      "php": "~5.6.0|7.0.2|7.0.4|~7.0.6|~7.1.0|~7.1.30|~7.2.12",
-      "magento/module-store": "0.74.0-beta4",
-      "magento/module-theme": "0.74.0-beta4",
-      "magento/module-widget": "0.74.0-beta4",
-      "magento/module-backend": "0.74.0-beta4",
-      "magento/module-catalog": "0.74.0-beta4",
-      "magento/module-email": "0.74.0-beta4",
-      "magento/module-ui": "0.74.0-beta4",
-      "magento/module-variable": "0.74.0-beta4",
-      "magento/module-media-storage": "0.74.0-beta4",
-      "magento/framework": "0.74.0-beta4",
-      "magento/magento-composer-installer": "*"
+        "magento/magento-composer-installer": "*",
+        "php": "~5.6.0|7.0.2|7.0.4|~7.0.6|~7.1.0|~7.1.30|~7.2.12",
+        "magento/framework": "100.0.*|100.1.*|101.0.*|102.0.*",
+        "magento/project-community-edition": "*",
     },
     "type": "magento2-module",
     "version": "0.74.0-beta4",
