--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,10 @@
     "name": "mangoit/subcategorylisting",
     "description": "Mangoit SubCategoryListing",
     "require": {
-        "magento/magento-composer-installer": "*",
-        "php": "~5.6.0|7.0.2|7.0.4|~7.0.6|~7.1.0|~7.1.30|~7.2.12",
-        "magento/framework": "100.0.*|100.1.*|101.0.*|102.0.*",
-        "magento/project-community-edition": "*",
+      "php": "~5.6.0|7.0.2|7.0.4|~7.0.6|~7.1.0|~7.1.30|~7.2.12",
+      
+      "magento/framework": "100.0.*|100.1.*|101.0.*|102.0.*",
+      "magento/magento-composer-installer": "*"
     },
     "type": "magento2-module",
     "version": "0.74.0-beta4",
