--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,11 @@
       "php": "~5.6.0|7.0.2|7.0.4|~7.0.6|~7.1.0|~7.1.30|~7.2.12",
       
       "magento/framework": "100.0.*|100.1.*|101.0.*|102.0.*",
-      "magento/magento-composer-installer": "*"
+      "magento/magento-composer-installer": "*",
+	  "mangoit/subcategorylisting": "dev-master"
     },
     "type": "magento2-module",
-    "version": "0.74.0-beta4",
+    "version": "1.0.0",
     "license": [
         "OSL-3.0",
         "AFL-3.0"
